# uk-street-crimes

./: .pre-commit-config.yaml  README.md  docker-compose.yml  setup.cfg
dashboard/: street-crimes.ndjson
src/uk/street/crimes/: cli.py
src/uk/street/crimes/domain/: dataclass.py  pipeline.py  providers.py  repositories.py  transform.py
