[metadata]
name = uk_street_crimes
author = "Szymon Wojtkowski"
version = 0.1.0
long_description = file: README.md
long_description_content_type="text/markdown"
classifiers =
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
package_dir =
  = src
include_package_data = true
python_requires = >=3.9, <3.10
install_requires =
  click
  elasticsearch ~= 8.1.0
  fsspec

[options.extras_require]
dev =
  black
  isort
  pre-commit
  pip-tools
  pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  extract-street-crime-data = uk.street.crimes.cli:extract_street_crime_data

[isort]
profile = black
